Assertion failure: eventStack.empty() in TraceLogging.cpp:875
Categories
(Core :: JavaScript Engine, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox68 | --- | fixed |
People
(Reporter: gregtatum, Assigned: denispal)
Details
Attachments
(1 file)
I keep on hitting this while running the profiler in debug build. I'm not sure on the exact STR, but I'm doing a bunch of capturing of profiles of cnn.com. It might be when I stop the profiler. If I get a more precise STR I will update.
STR:
- Use a debug build.
- Install Gecko Profiler Addon
- Record a profile
- Go to cnn.com
- Capture profile
- Stop profile
I'm not 100% sure where in that STR it's happening.
Assertion failure: eventStack.empty(), at /Users/gregorytatum/dev/gecko/js/src/vm/TraceLogging.cpp:875
Exiting due to channel error.
| Reporter | ||
Comment 1•7 years ago
|
||
Oh, and this is happening when the Tracelogger feature is turned off, and as far as I can tell ac_add_options --enable-trace-logging is disabled in my build config.
ni :dpalmeiro to get it on your radar.
| Reporter | ||
Comment 2•7 years ago
|
||
Ok, just reproduced, and it's:
STR:
- Use a debug build.
- Install Gecko Profiler Addon
- Start recording ctrl + shift + 1
- Load cnn.com
- Capture profile ctrl + shift + 2
Then it hit the assertion
| Assignee | ||
Comment 3•7 years ago
|
||
Thanks, I'll take a look. The trace logger is enabled by default in debug builds.
Updated•7 years ago
|
Updated•7 years ago
|
| Assignee | ||
Comment 4•7 years ago
|
||
This occurs while calculating durations whenever we reach the end of the event list and we didn't encounter the TraceLogger_Stop events for events that were still active when the profiler stopped.
| Assignee | ||
Comment 5•7 years ago
|
||
An assert occurs while calculating durations whenever we reach the end of the event list and we didn't encounter the TraceLogger_Stop events for events that were still active when the profiler stopped. The fix is to use the last event as the end event for any remaining events on the stack.
| Assignee | ||
Updated•7 years ago
|
Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/244b0ee2c890
When calculating event durations, if we reach the end of the event list then use the last event as the end event for any events that remain on the stack r=sfink
Comment 7•7 years ago
|
||
| bugherder | ||
Description
•