bug 1530011: When calculating event durations, if we reach the end of the event list then use the last event as the end event for any events that remain on the stack r=sfink

An assert occurs while calculating durations whenever we reach the end of the event list and we didn't encounter the TraceLogger_Stop events for events that were still active when the profiler stopped.  The fix is to use the last event as the end event for any remaining events on the stack.

Differential Revision: https://phabricator.services.mozilla.com/D29926